Removing trademark symbols

--- a/policies.md.erb
+++ b/policies.md.erb
@@ -1,6 +1,6 @@
 ---
-breadcrumb: RabbitMQ for Pivotal Cloud Foundry&reg; Documentation
-title: Default policies for the RabbitMQ Service
+breadcrumb: RabbitMQ for Pivotal Cloud Foundry Documentation
+title: Default policies for the RabbitMQ&reg; Service
 owner: London Services
 ---
 
