--- a/configuring.md.erb
+++ b/configuring.md.erb
@@ -1,12 +1,12 @@
 ---
-breadcrumb: RabbitMQ for Pivotal Cloud Foundry&reg; Documentation
-title: Configuring the RabbitMQ Service
+breadcrumb: RabbitMQ for Pivotal Cloud Foundry Documentation
+title: Configuring the RabbitMQ&reg; Service
 owner: London Services
 ---
 
 # Configuration
 
-On the RabbitMQ for [Pivotal Cloud Foundry&reg;](https://network.pivotal.io/products/pivotal-cf) (PCF) tile in Ops Manager, you can configure the following items:
+On the RabbitMQ for [Pivotal Cloud Foundry](https://network.pivotal.io/products/pivotal-cf) (PCF) tile in Ops Manager, you can configure the following items:
 
 ## Management dashboard
 
