--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -29,11 +29,15 @@ Consider the following compatibility information before upgrading RabbitMQ for P
 
 <p class="note"><strong>Note</strong>: Upgrading from any 1.5x tile to 1.6.x will involve taking the RabbitMQ cluster offline while the version of RabbitMQ is upgraded from 3.5.7 to 3.6.2.  </p>
 
-<p class="note"><strong>Note</strong>: Before you upgrade to Ops Manager 1.4.x, you must first upgrade RabbitMQ for PCF to at least 1.3.4. This allows RabbitMQ for PCF upgrades after you install OpsManager 1.4.x. </p>
-
-<p class="note"><strong>Note</strong>: Only version 1.5.9 and above are certified to work in new installations of Ops Manager 1.7.x. </p>
-
 <p class="note"><strong>Note</strong>: You can not upgrade version 1.5.11 to 1.6.0, so you must use 1.6.1 or higher </p>
+
+<div class="note"><strong>Note</strong>: <a href="http://docs.pivotal.io/p-identity/index.html">The RabbitMQ tile</a> operates in lockstep with Pivotal Elastic Runtime.<br>
+If you are a customer upgrading from PCF 1.7 to PCF 1.8 and you are using RabbitMQ v1.6.x or earlier, you must do the following before proceeding with the PCF 1.8 upgrade:
+<ul>
+<li>Upgrade to a Rabbit 1.6.5 or point-release greater tile.</li>
+<li>Upgrade to a Rabbit v1.7.x tile.</li>
+</ul>
+</div>
 
 For more information, refer to the full [Product Version Matrix](http://docs.pivotal.io/compatibility-matrix.pdf).
 
