minor fix to link in lockstep note[#124993531]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -31,7 +31,7 @@ Consider the following compatibility information before upgrading RabbitMQ for P
 
 <p class="note"><strong>Note</strong>: You can not upgrade version 1.5.11 to 1.6.0, so you must use 1.6.1 or higher </p>
 
-<div class="note"><strong>Note</strong>: <a href="http://docs.pivotal.io/p-identity/index.html">The RabbitMQ tile</a> operates in lockstep with Pivotal Elastic Runtime.<br>
+<div class="note"><strong>Note</strong>: The RabbitMQ tile operates in lockstep with Pivotal Elastic Runtime.<br>
 If you are a customer upgrading from PCF 1.7 to PCF 1.8 and you are using RabbitMQ v1.6.x or earlier, you must do the following before proceeding with the PCF 1.8 upgrade:
 <ul>
 <li>Upgrade to a Rabbit 1.6.5 or point-release greater tile.</li>
