--- a/releases.html.md.erb
+++ b/releases.html.md.erb
@@ -35,11 +35,11 @@ Features included in this release:
 
 Features included in this release:
 
-* Syslog endpoints for HAproxy and RabbitMQ can now be configured via Ops Manager
+* Syslog endpoints for HAProxy and RabbitMQ can now be configured via Ops Manager
 * The RabbitMQ service broker will emit logs via the configured syslog endpoint
-* RabbitMQ and HAproxy Metrics are now exposed on the firehose
-* RabbitMQ and HAproxy heartbeats are now exposed as metrics
-* For SSl configuration you can now specify either <code>verify</code> and <code>fail\_if\_no\_peer\_cert</code> options
+* RabbitMQ and HAProxy Metrics are now exposed on the firehose
+* RabbitMQ and HAProxy heartbeats are now exposed as metrics
+* For SSL configuration you can now specify either <code>verify</code> and <code>fail\_if\_no\_peer\_cert</code> options
 * SSL Certificates are validated during entry
 * You can set the metrics polling interval when you deploy
 * Includes the latest version of RabbitMQ OSS 3.6.2
@@ -69,7 +69,7 @@ Features included in this release:
 
 * Updated to the latest version of broker_registrar
 
-* Note you can only upgrage to version 1.6.1 and above
+* Note you can only upgrade to version 1.6.1 and above
 
 ### 1.5.10
 **Release Date: 18th May 2016**
