This is an update for stemcell 3262 in 1.7.1

--- a/releases.html.md.erb
+++ b/releases.html.md.erb
@@ -5,6 +5,13 @@ owner: London Services
 
 Release notes for [RabbitMQ for Pivotal Cloud Foundry](https://network.pivotal.io/products/pivotal-rabbitmq-service)
 
+### 1.7.1
+**Release Date:  21st September 2016**
+
+Features included in this release:
+
+* Using stemcell 3263
+
 ### 1.7.0
 **Release Date:  2nd September 2016**
 
