--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -33,7 +33,7 @@ Consider the following compatibility information before upgrading RabbitMQ for P
 
 <p class="note"><strong>Note</strong>: You can not upgrade v1.5.11 to v1.6.0, so you must use v1.6.1 or later.</p>
 
-<p class="note"><strong>Note</strong>: All customers upgrading from v1.6.x to v1.6.5 or later versions of the tile should read the 
+<p class="note"><strong>Note</strong>: All customers upgrading from v1.6.x to v1.6.5 or later versions of the tile should read the
 <em>Additional upgrade steps for customers going from v1.6.x to v1.6.5</em> document located with the release on https://network.pivotal.io/products/pivotal-rabbitmq-service</p>
 
 For more information, refer to the full [Product Version Matrix](http://docs.pivotal.io/compatibility-matrix.pdf).
@@ -77,7 +77,7 @@ For more information, refer to the full [Product Version Matrix](http://docs.piv
 <tr>
   <th>1.8.x</th>
   <td><ul>
-  <li>1.7.0 </li>
+  <li>1.7.0 through to 1.7.1</li>
     </ul>
   </td>
 </tr>
