--- a/releases.html.md.erb
+++ b/releases.html.md.erb
@@ -13,7 +13,7 @@ Features included in this release:
 * The RabbitMQ service broker will emit logs via the configured syslog endpoint
 * RabbitMQ and HAproxy Metrics are now exposed on the firehose
 * RabbitMQ and HAproxy heartbeats are now exposed as metrics
-* For SSl configuration you can now specify either <code>verify</code> and <code>fail\_if\_no\_peer\_cert</code> options
+* For SSL configuration you can now specify either <code>verify</code> and <code>fail\_if\_no\_peer\_cert</code> options
 * SSL Certificates are validated during entry
 * You can set the metrics polling interval when you deploy
 * Includes the latest version of RabbitMQ OSS 3.6.2
