--- a/releases.html.md.erb
+++ b/releases.html.md.erb
@@ -4,7 +4,7 @@ owner: London Services
 ---
 
 Release notes for [RabbitMQ for Pivotal Cloud Foundry&reg;](https://network.pivotal.io/products/pivotal-rabbitmq-service)
-### 1.6.0
+## 1.6.0
 **Release Date: 26th May 2016**
 
 Features included in this release:
@@ -21,63 +21,63 @@ Features included in this release:
 * RabbitMQ 3.6.0 changed the default TTL for MQTT subscriptions from 30 minutes to 24 hours.  This may have caused an issue for existing queues and subscribers when upgrading, so the `rabbitmq_mqtt.subscription_ttl` default is set to 30 minutes (1800000 ms)
 * the default swap space has been increased to match system memory
 
-### 1.5.11
+## 1.5.11
 **Release Date: 26th May 2016**
 
 Features included in this release:
 
 * Updated to the latest version of broker_registrar
 
-### 1.5.10
+## 1.5.10
 **Release Date: 18th May 2016**
 
 Features included in this release:
 
 * Updated stemcell to 3232.4 f for USN-2977-1
 
-### 1.5.9
+## 1.5.9
 **Release Date: 5th May 2016**
 
 Features included in this release:
 
 * Updated stemcell to 3146.11, including stemcell CVE updates
 
-### 1.5.8
+## 1.5.8
 **Release Date: 16th February 2016**
 
 Features included in this release:
 
 * Update stemcell to 3146.10 patches Ubuntu CVE 2016-3134
 
-### 1.5.7
+## 1.5.7
 **Release Date: 24th February 2016**
 
 Features included in this release:
 
 * Update stemcell to 3146.9 patches Ubuntu CVE USN-2910-1
 
-### 1.5.6
+## 1.5.6
 **Release Date: 18th February 2016**
 
 Features included in this release:
 
 * Update stemcell to 3146.8 patches Ubuntu CVE-2015-7547
 
-### 1.5.5
+## 1.5.5
 **Release Date: 2nd February 2016**
 
 Features included in this release:
 
 * Update stemcell to 3146.6 patches Ubuntu CVEs
 
-### 1.5.4
+## 1.5.4
 **Release Date: 21st January 2016**
 
 Features included in this release:
 
 * Update stemcell to 3146.5 resolves CVE-2016-0728
 
-### 1.5.3
+## 1.5.3
 **Release Date: 18th January 2016**
 
 Features included in this release:
@@ -85,7 +85,7 @@ Features included in this release:
 * Bug fix that resolves issue with missing plugins causing RabbitMQ nodes to fail to start
 * Update stemcell to 3146.3, resolves CVE-2016-0777 and CVE-2016-0778
 
-### 1.5.2
+## 1.5.2
 **Release Date: 7th January 2016**
 
 Features included in this release:
@@ -93,7 +93,7 @@ Features included in this release:
 * Bug fix with broker registrar errand failing if ERT has different system & app domains
 * Update stemcell to 3146.2, resolves CVE USN-2857-1
 
-### 1.5.1
+## 1.5.1
 **Release Date: 21st December 2015**
 
 Features included in this release:
@@ -101,7 +101,7 @@ Features included in this release:
 * RabbitMQ 3.5.7
 * Update stemcell to 3153
 
-### 1.5.0
+## 1.5.0
 **Release Date: 18th December 2015**
 
 Features included in this release:
@@ -113,42 +113,42 @@ Features included in this release:
 
 **Important:** You will experience a **full cluster outage** during this particular deployment as the RabbitMQ & Erlang versions are updated. We recommend that you communicate with your application owners in advance to minimize the impact of this downtime.
 
-### 1.4.10
+## 1.4.10
 **Release Date: 3rd December 2015**
 
 Features included in this release:
 
 * Update stemcell to 3146. Resolves CVE USN-2821-1
 
-### 1.4.9
+## 1.4.9
 **Release Date: 1st December 2015**
 
 Features included in this release:
 
 * Update stemcell to 3144. Resolves CVEs: USN-2815-1, USN-2812-1 and USN-2810-1
 
-### 1.4.8
+## 1.4.8
 **Release Date: 11th November 2015**
 
 Features included in this release:
 
 * Update stemcell to 3130. Resolves CVE USN-2806-1
 
-### 1.4.7
+## 1.4.7
 **Release Date: 30th October 2015**
 
 Features included in this release:
 
 * Update stemcell to 3112
 
-### 1.4.6
+## 1.4.6
 **Release Date: 14th October 2015**
 
 Features included in this release:
 
 * Update stemcell to 3100 for PCF Suite 1.6 release
 
-### 1.4.5
+## 1.4.5
 **Release Date: 7th October 2015**
 
 Features included in this release:
@@ -162,21 +162,21 @@ Known issues:
   * Elastic Runtime 1.5.6 on OpenStack users must configure their object storage to use the internal blobstore option.
   * vSphere, AWS and vCloud users are not affected.
 
-### 1.4.4
+## 1.4.4
 **Release Date: 2nd September 2015**
 
 Features included in this release:
 
 * Updated stemcell to 3062
 
-### 1.4.3
+## 1.4.3
 **Release Date: 29th July 2015**
 
 Features included in this release:
 
 * Updated stemcell to 3026 to resolve CVE-2015-3290
 
-### 1.4.2
+## 1.4.2
 **Release Date: 16th July 2015**
 
 Features included in this release:
@@ -190,7 +190,7 @@ Features included in this release:
 
 * The `manage` button for your RabbitMQ instance in Apps Manager will not automatically log you into the RabbitMQ Dashboard. You need to press `logout` and then login with your `username` and `password` which can be obtained from inspecting the environment variables for your instance.
 
-### 1.4.1
+## 1.4.1
 **Release Date: 6th July 2015**
 
 Features included in this release:
@@ -227,7 +227,7 @@ Additional known issues:
 
 <p class="note"><strong>Note</strong>: BOSH Stemcell 2865.1 is required for installation on Ops Manager 1.5.x and above.</p>
 
-### 1.3.6
+## 1.3.6
 **Release Date: 23rd March 2015**
 
 Features included in this release:
@@ -291,7 +291,7 @@ Features included in this release:
 
 * Resolves issue with idle client connections being closed very quickly
 
-### Upgrading from 1.2.0
+## Upgrading from 1.2.0
 It is unfortunately **not** possible to upgrade from any prior versions to this tile version or greater.
 E.g. from 1.2.0 to 1.3.2.1
 
@@ -300,7 +300,7 @@ The migration between the versions would have being risky and complicated due to
 
 We always aim for tiles to be upgradeable from previous versions where possible.
 
-### Options
+## Options
 We recommend the following:
 
 * Backup any persisted data (if required)
