--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -27,14 +27,14 @@ The [Pivotal Cloud Foundry](https://network.pivotal.io/products/pivotal-cf) (PCF
 
 Consider the following compatibility information before upgrading RabbitMQ for Pivotal Cloud Foundry.
 
-<p class="note"><strong>Note</strong>: Customers upgrading from v 1.7.0 - 1.7.3 will experince downtime during the deployment as the RabbitMQ package is upgraded.</p>
+<p class="note"><strong>Note</strong>: Customers upgrading from v 1.7.0 - 1.7.3 will experience downtime during the deployment while the RabbitMQ package upgrades.</p>
 
-<p class="note"><strong>Note</strong>: You can only upgrade this tile from v1.6.5 or later, which must be installed before starting an Ops Manager upgrade.</p>
+<p class="note"><strong>Note</strong>: You can only upgrade this tile from v1.6.5 or later, which you must install before starting an Ops Manager upgrade.</p>
 
-<p class="note"><strong>Note</strong>: Customers with version 1.6.8 of the tile should only upgrade to verison 1.7.4 or higher</p>
+<p class="note"><strong>Note</strong>: Customers with version 1.6.8 of the tile must upgrade to version 1.7.4 or higher.</p>
 
 <p class="note"><strong>Note</strong>: All customers upgrading from v1.6.x to v1.6.5 or later versions of the tile should read the
-<em>Additional upgrade steps for customers going from v1.6.x to v1.6.5</em> document located with the release on https://network.pivotal.io/products/pivotal-rabbitmq-service</p>
+<em>Additional upgrade steps for customers going from v1.6.x to v1.6.5</em> document located with the release on <a href="https://network.pivotal.io/products/pivotal-rabbitmq-service">Pivotal Network</a>.</p>
 
 For more information, refer to the full [Product Version Matrix](http://docs.pivotal.io/compatibility-matrix.pdf).
 
@@ -82,7 +82,7 @@ For more information, refer to the full [Product Version Matrix](http://docs.piv
 * Automated upgrades of RabbitMQ for major, minor and patch releases
 * Configure the end point for the RabbitMQ Syslog
 * RabbitMQ and HAProxy metrics are exposed on the firehose
-* IPSec does not work with this version of the tile and it should be installed into a non-IPSec subnet
+* IPSec does not work with this version of the tile. You must install the tile on a non-IPSec subnet.
 
 ### Install via Pivotal Ops Manager
 
@@ -101,7 +101,7 @@ This product requires Ops Manager v1.4.0 or greater.
 RabbitMQ is shown in the services marketplace, either in the Apps Manager or
 through `cf marketplace` on the CLI.
 
-Application developers can create an instance of the application with `cf create-service p-rabbitmq standard <your name>`.
+Application developers can create an instance of the application with `cf create-service p-rabbitmq standard YOUR-NAME`.
 For this service an instance equals a **Vhost** on the RabbitMQ cluster.
 
 Creating a binding gives the user permissions to access this Vhost and associated management dashboard.
