adds date for 1.6.9 release and fixes capitalization errors

--- a/releases.html.md.erb
+++ b/releases.html.md.erb
@@ -10,10 +10,10 @@ Release notes for [RabbitMQ for Pivotal Cloud Foundry](https://network.pivotal.i
 
 Features included in this release:
 
-* INstalling this release will require the RabbitMQ cluster to be taken offline during the deployment
+* Installing this release will require the RabbitMQ cluster to be taken offline during the deployment
 * Using stemcell 3233.2
 * OSS RabbitMQ 3.6.5 and Erlang 18.1 is included
-* HAproxy v1.6.9
+* HAProxy v1.6.9
 * Golang 1.6.3
 * JRE 1.8.102
 * Fixed issue with SSL configuration options in Operations Manager swapping the 'Enable verify_peer SSL certificate verification' option and 'Require peer certificate validation' option.  Existing settings will be migrated with no input from operators.
@@ -26,20 +26,20 @@ Features included in this release:
 
 * Using stemcell 3233.1
 * OSS RabbitMQ 3.6.5 is included
-* HAproxy v1.6.9
+* HAProxy v1.6.9
 * Golang 1.6.3
 * JRE 1.8.102
 * Fixed issue with SSL configuration options in Operations Manager swapping the 'Enable verify_peer SSL certificate verification' option and 'Require peer certificate validation' option.  Existing settings will be migrated with no input from operators.
 
 ### 1.6.7
-**Release Date: th October 2016**
+**Release Date: 27th September 2016**
 
 Features included in this release:
 
 * Using stemcell 3232.21
 * Customers upgrading from versions below 1.6.4 should expect the RabbitMQ cluster to be taken offline while the new RabbitMQ package is applied
 * Customers should read the accompanying 'Updating RabbitMQ for PCF from v1.6.x to v1.6.8 section
-* Dependencies updated: HAproxy (1.6.9), Golang (1.6.3), JRE 1.8.102
+* Dependencies updated: HAProxy (1.6.9), Golang (1.6.3), JRE 1.8.102
 * OSS RabbitMQ 3.6.5 & Erlang 18.1
 * Fixed issue with SSL configuration options in Operations Manager swapping the 'Enable verify_peer SSL certificate verification' option and 'Require peer certificate validation' option.  Existing settings will be migrated with no input from operators.
 
